--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;1,500;1,600;1,700&family=Expletus+Sans:ital,wght@0,400;0,500;0,600;1,700&family=Orbitron:wght@400;800&display=swap');
 
+
+
+
 /* font-family: 'Exo 2', sans-serif;
 font-family: 'Expletus Sans', sans-serif;
 font-family: 'Orbitron', sans-serif; */
+
 
 *{
   padding: 0;
@@ -16,4 +20,10 @@ html, body, #root{
   margin: 0;
   padding: 0;
   overflow: hidden;
+}
+body{
+  background-color: #000000;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
